terraform-week4/1-rds-ec2/2-vpc.tf

resource "aws_vpc" "vpc" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_hostnames = true //for RDS
  tags = {
    Name = "${var.env_prefix}-vpc"
  }
}
